--- a/fyp-frontend/src/App.css
+++ b/fyp-frontend/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #89CFF0;
+  background-color: off whitesmoke;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
