--- a/fyp-frontend/src/pages/pages.css
+++ b/fyp-frontend/src/pages/pages.css
@@ -72,9 +72,15 @@
   font-size: 12px;
 }
 
+.error-label {
+  font-size: 12px;
+  color: #ff0000;
+}
+
 .page-label-bold {
   font-size: 12px;
   margin-left: 30px;
+  font-weight: bold;
 }
 
 .my-heading {
