--- a/fyp-frontend/src/pages/pages.css
+++ b/fyp-frontend/src/pages/pages.css
@@ -39,7 +39,18 @@
 }
 
 /* Input boxes */
-
+.food-input {
+  width: 100px;
+  height: 40px;
+  font-size: 12px;
+  padding: 2px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+  border-radius: 12px;
+}
 .portion-size-input {
   width: 50px;
   height: 40px;
