--- a/fyp-frontend/src/pages/pages.css
+++ b/fyp-frontend/src/pages/pages.css
@@ -171,6 +171,7 @@
   padding: 10px;
   width: 500px;
   height: 500px;
+  overflow: auto;
 }
 
 .form-row {
@@ -183,4 +184,13 @@
   display: flex;
   justify-content: space-between;
   margin-right: auto;
+}
+.scrollable-box {
+  max-height: 440px; /* Adjust this value as needed */
+  overflow-y: auto;
+  margin: 10px 0;
+  padding: 0px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  width: 800px;
 }
